Style game info using material-ui

--- a/src/index.css
+++ b/src/index.css
@@ -35,16 +35,21 @@ button {
 
 .cards {
   margin: auto;
-  padding: 30px;
+  padding-bottom: 20px;
 }
 
 .materialCards {
   text-align: left;
   width: 300px;
-  height: 660px;
-  margin: 20px;
+  height: auto;
+  margin-right: 20px;
+  margin-left: 20px;
+  padding-bottom: 5px;
 }
 
 .game-info {
+  margin: auto;
   font-size: small;
+  width: 200px;
+  padding-bottom: 15px;
 }
